<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.astroweather.MainActivity">

    <item
        android:id="@+id/city"
        android:title="@string/city_name"
        app:showAsAction="always"/>
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/refresh_name"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit_name"
        app:showAsAction="never"/>
</menu>